# jarvis-cli

./: .gitignore  50K_REVENUE_GOAL.md  BUG_ANALYSIS.md  CHICKEN_EGG_SOLUTION.md  COMPLETE_PLATFORM_STRATEGY.md  Cargo.toml  DEVELOPMENT.md  EVAN_BUSINESS_INFRASTRUCTURE.md  EVAN_DEVELOPER_STRATEGY.md  EVAN_ENTREPRENEUR_STRATEGY.md  EVAN_SON_STRATEGY.md  GET_TO_1_DAU.md  IMMEDIATE_ACTIONS.md  Makefile  NEXT_ACTIONS_REAL_WORLD.md  README.md  README_hierarchy.md  SELF_IMPROVEMENT_REPORT.md  SELF_IMPROVEMENT_SUMMARY.md  THIS_IS_NOT_A_HOBBY.md  cleanup_global.sh  confidence_interface.py  debug_paste_issue.py  hierarchy_manager.py  integrated_business_model.md  pyproject.toml  quantum_analysis.json  setup_dev.sh  test_input_behavior.py  test_multiline.py  test_paste_fix.py  timken_reconnection_strategy_20260530_132745.json  timken_reconnection_strategy_20260530_145758.json
agent_logs/: daily_operations_20260530_141339.json
demos/: qpu_demo.py
docs/: MULTILINE_INPUT.md  SPEC_agent_extraction.md  SPEC_rust_tui.md
jarvis_cli/: dashboard.py  main.py  quantum_commands.py
src/: daemon.rs  main.rs  queue.rs  render.rs  sse.rs  terminal.rs  tui.rs
tests/: __init__.py  conftest.py  test_clear_queue.py  test_codebase_index.py  test_daemon.py  test_dashboard.py  test_file_operations.py  test_git_operations.py  test_replay.py
