[package]
name = "jarvis-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
